--- a/pagos.html
+++ b/pagos.html
@@ -47,9 +47,11 @@
                     <h4 class="titulo_form"> CONSULTAR PAGO </h4>
                     <div class="usuario">
                         <img class="img_avatar" src="images/monto.png" alt="">
-                        <input class="controls_usuario" type="text" name="id_pago" id="nombre" placeholder="Ingrese el ID del pago">
-                        <input class="controls_apellido" type="text" name="ref_pago" id="apellido" placeholder="Ingrese referencia del pago">
+                        <input class="controls_usuario" type="number" name="ID" placeholder="Ingrese el ID del pago">
+                        <input class="controls_apellido" type="number" name="referencia" placeholder="Ingrese referencia del pago">
                     </div>
+                    <span class="error-text" id="pago-get-error-text"></span>
+                    <p class="response" id="pago-get-response"></p>
                     <div class="clase" align="left">
                         <button input="submit" value="AGREGAR" class="botons">
                             <h2 class="prb"> CONSULTAR </h2>
@@ -65,7 +67,7 @@
             </form>
         </div>
     </div>
-    <script src="js/script.js"></script>
+    <script src="js/pagos.js"></script>
     <footer id="footer">
         Copyright 2022. Todos los derechos reservados <br>
         Maracaibo, EDO Zulia, Venezuela <br>
